--- a/frontend/weecs-react-calendar/src/styles/LightningBolt.css
+++ b/frontend/weecs-react-calendar/src/styles/LightningBolt.css
@@ -79,7 +79,7 @@
   .chameleon {
     width: 150px;
     right: -3rem;
-    bottom: -1rem;
+    bottom: -3rem; 
   }
   
   
@@ -109,7 +109,7 @@
   .chameleon {
     width: 110px;
     right: -2rem;
-    bottom: -1rem;
+    bottom: -4rem;
   }
   
   .lightning-bolt {
